--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -113,6 +113,7 @@ img {
 .navbar-custom .nav li a {
   font-weight: 800;
   color: #E84C3D;
+  padding: 0 2em 0 2em;
 }
 
 .navbar-custom .navbar-brand:hover,
