--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -829,7 +829,7 @@ color: #f1c40f;
   padding: 0.625rem 1.25rem;
   margin: 0 0 1.25rem;
   font-size: 1.1rem;
-  border-left: 0.3125rem solid #eee;
+  border-left: 0.3125rem solid #E84C3D;
 }
 
 .blog-post blockquote p:last-child {
