--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -29,8 +29,9 @@ a:focus {
   color: #d51d22;
 }
 blockquote {
-  color: #808080;
+  color: #c7c7c7;
   font-style: italic;
+  border-left: 0.3125rem solid #E84C3D;
 }
 blockquote p:first-child {
   margin-top: 0;
