--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,38 @@
     {%- endif -%}
   {% endcapture %}
 
+
+    <!-- 
+                              !         !          
+                             ! !       ! !          
+                            ! . !     ! . !          
+                               ^^^^^^^^^ ^            
+                             ^             ^          
+                           ^  (0)       (0)  ^       
+                          ^        ""         ^       
+                         ^   ***************    ^     
+                       ^   *                 *   ^    
+                      ^   *   /\   /\   /\    *    ^   
+                     ^   *                     *    ^
+                    ^   *   /\   /\   /\   /\   *    ^
+                   ^   *                         *    ^
+                   ^  *                           *   ^
+                   ^  *                           *   ^
+                    ^ *                           *  ^  
+                     ^*                           * ^ 
+                      ^ *                        * ^
+                      ^  *                      *  ^
+                        ^  *       ) (         * ^
+                            ^^^^^^^^ ^^^^^^^^^ 
+                                HI THERE!
+
+
+ -->
+ <meta content="#2c3f50" name="theme-color">
+ <meta content="#2c3f50" name="msapplication-navbutton-color">
+ <meta content="#2c3f50" name="apple-mobile-web-app-status-bar-style">
+
+
   <title>{{ title }}</title>
 
   {% if site.author %}
@@ -129,6 +161,25 @@
 
   <meta property="twitter:title" content="{{ title }}">
   <meta property="twitter:description" content="{{ description }}">
+
+
+  <meta name="description" content="Gabriel Furmuzachi: graphic designer, web developer, philosopher, and writer.">
+    <meta name="robots" content="index">
+    <meta name="Keywords" content="Gabriel Furmuzachi graphic design web developer philosopher writer Vienna Wien">
+   
+ <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@fugabite">
+    <meta name="twitter:title" content="Gabriel Furmuzachi | Graphic Designer / Web Developer / Philosopher / Writer">
+    <meta name="twitter:description" content="Gabriel Furmuzachi">
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Gabriel Furmuzachi">
+    <meta property="og:type" content="product">
+    <!-- Open Graph data more here-->
+  
+    <meta property="og:description" content="Gabriel Furmuzachi.">
+    <meta property="og:site_name" content="cento.red">
+
 
   {% if img != "" %}
   <meta name="twitter:image" content="{{ img | absolute_url }}">
