--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,6 +24,7 @@ common-js:
 
 {% include head.html %}
 
+<script src="/assets/css/scrollprogressJS.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
   progressJS.start();
