--- a/_includes/head.html
+++ b/_includes/head.html
@@ -191,7 +191,8 @@
   <link rel="stylesheet" href="{{ "/assets/css/staticman.css" | relative_url }}">
   {% endif %}
 
-  <link href="/assets/css/scrollprogressJS.css" rel="stylesheet"><script src="/assets/css/scrollprogressJS.js"></script>
+  <link href="/assets/css/scrollprogressJS.css" rel="stylesheet">
+
 
   {% if page.head-extra %}
     {% for file in page.head-extra %}
