--- a/assets/js/scrollprogressJS.css
+++ b/assets/js/scrollprogressJS.css
@@ -1,6 +1,6 @@
 #progressbarJS {
-  background-color: #003f72;
-  height: 3px;
+  background-color: #d51d22;
+  height: 1em;
   position: fixed;
   top:0;
   left:0;
