--- a/_includes/head.html
+++ b/_includes/head.html
@@ -180,9 +180,9 @@
     <meta property="og:description" content="Gabriel Furmuzachi.">
     <meta property="og:site_name" content="cento.red">
 
-    <link rel="icon" type="image/svg+xml" href="/blog/assets/img/favicon.svg">
-    <link rel="alternate icon" href="/blog/assets/img/favicon.ico">
-    <link rel="mask-icon" href="/blog/assets/img/safari-pinned-tab.svg" color="#2c3f50">
+    <link rel="icon" type="image/svg+xml" href="/assets/img/favicon.svg">
+    <link rel="alternate icon" href="/assets/img/favicon.ico">
+    <link rel="mask-icon" href="/assets/img/safari-pinned-tab.svg" color="#2c3f50">
 
   {% if img != "" %}
   <meta name="twitter:image" content="{{ img | absolute_url }}">
@@ -194,7 +194,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/staticman.css" | relative_url }}">
   {% endif %}
 
-  <link href="/blog/assets/js/scrollprogressJS.css" rel="stylesheet">
+  <link href="/assets/js/scrollprogressJS.css" rel="stylesheet">
 
 
   {% if page.head-extra %}
